Bug 493275 - KDE Plasma 'Toggle Mouse Click Effect' should be 'Toggle Mouse Click Animation'
Summary: KDE Plasma 'Toggle Mouse Click Effect' should be 'Toggle Mouse Click Animation'
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.1.5
Platform: Other Other
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 493363 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-09-17 16:15 UTC by reports_go_brrr
Modified: 2024-09-19 19:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3
Sentry Crash Report:


Attachments
KWin Shortcuts (66.04 KB, image/png)
2024-09-17 16:15 UTC, reports_go_brrr
Details
Desktop effects (60.61 KB, image/png)
2024-09-17 16:15 UTC, reports_go_brrr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description reports_go_brrr 2024-09-17 16:15:44 UTC
Created attachment 173777 [details]
KWin Shortcuts

SUMMARY
Shortcut of "KWin" "Toggle Mouse Click Effect" need to be renamed to "Toggle Mouse Click Animation" because of "Mouse Click Animation" desktop effect's name.

STEPS TO REPRODUCE
1. Open Settings
2. Go to "Desktop effects" and check if "Mouse Click Animation" is available for you
3. Then go to Shortcuts
4. Check KWin tab
5. Search "Toggle Mouse Click Effect"

OBSERVED RESULT
Slight mislead is present.

EXPECTED RESULT
Please fix it.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.7-arch1-1 (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
Vanilla KDE Plasma.
Comment 1 reports_go_brrr 2024-09-17 16:15:59 UTC
Created attachment 173778 [details]
Desktop effects
Comment 2 Bug Janitor Service 2024-09-17 17:29:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6407
Comment 3 cwo 2024-09-18 18:57:03 UTC
Git commit 99a04955c19d44d6434cd29331aefd946d4b8175 by Christoph Wolk.
Committed on 18/09/2024 at 18:48.
Pushed by cwo into branch 'master'.

plugins/mouseclick: call shortcut "Animation"

The mouseclick plugin's official name is "Mouse Click Animation", but
the keyboard shortcut for toggling the effect is called "Toggle Mouse
Click Effect". Not only is this a bit inconsistent, it's also unclear
when set from the Shortcuts kcm; "Toggle Mouse Click Effect" could also
refer to toggling what clicking the mouse does (e.g. disabling it
completely or swapping left and right click).

This change makes the name of the shortcut "Toggle Mouse Click
Animation", increasing consistency and clarity.
FIXED-IN: 6.3

M  +1    -1    src/plugins/mouseclick/mouseclick.cpp
M  +1    -1    src/plugins/mouseclick/mouseclick_config.cpp

https://invent.kde.org/plasma/kwin/-/commit/99a04955c19d44d6434cd29331aefd946d4b8175
Comment 4 Nate Graham 2024-09-19 19:00:33 UTC
*** Bug 493363 has been marked as a duplicate of this bug. ***