plugins/mouseclick: call shortcut "Animation"

The mouseclick plugin's official name is "Mouse Click Animation", but
the keyboard shortcut for toggling the effect is called "Toggle Mouse
Click Effect". Not only is this a bit inconsistent, it's also unclear
when set from the Shortcuts kcm; "Toggle Mouse Click Effect" could also
refer to toggling what clicking the mouse does (e.g. disabling it
completely or swapping left and right click).

This change makes the name of the shortcut "Toggle Mouse Click
Animation", increasing consistency and clarity.

BUG: 493275
FIXED-IN: 6.3