src/plugins/mouseclick/mouseclick.cpp
@@ -35,7 +35,7 @@ MouseClickEffect::MouseClickEffect()
 
     QAction *a = new QAction(this);
     a->setObjectName(QStringLiteral("ToggleMouseClick"));
-    a->setText(i18n("Toggle Mouse Click Effect"));
+    a->setText(i18n("Toggle Mouse Click Animation"));
     KGlobalAccel::self()->setDefaultShortcut(a, QList<QKeySequence>() << (Qt::META | Qt::Key_Asterisk));
     KGlobalAccel::self()->setShortcut(a, QList<QKeySequence>() << (Qt::META | Qt::Key_Asterisk));
     connect(a, &QAction::triggered, this, &MouseClickEffect::toggleEnabled);
